# 8BALL-POOL

./: .gitignore  Launch 8 Ball Analyzer.bat  README.md  crash_log.txt  implementation_plan.md  pyproject.toml  requirements.txt  run.py  setup_and_run.ps1
src/eight_ball_analyzer/: analysis.py  app.py  calibration.py  detection.py  export.py  geometry.py  live_capture.py  models.py  overlays.py  table_lock.py  tracker.py
src/eight_ball_analyzer/ui/: main_window.py  video_widget.py
tests/: analysis_math_test.py  smoke_test.py
