[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eight-ball-shot-analyzer"
version = "0.1.0"
description = "PyQt6 and OpenCV desktop training analyzer for recorded 8 Ball Pool practice videos and paused frames."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
    "PyQt6>=6.6",
    "ultralytics>=8.3",
]

[project.scripts]
eight-ball-analyzer = "eight_ball_analyzer.app:main"

[tool.setuptools.packages.find]
where = ["src"]
